--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./main.css">
   <title>jQuery slides</title>
 </head>
 <body>
@@ -19,5 +20,7 @@
     <button id="p2">第2张</button>
     <button id="p3">第3张</button>
   </div>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="./main.js"></script>
 </body>
 </html>
